--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ hideblock('iccv19csmBib');
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Compositional Video Prediction</b> <br/> 
 Yufei Ye, Maneesh Singh, Abhinav Gupta*, <strong>Shubham Tulsiani</strong>* <br/> 
 ICCV, 2019 <br/> 
-<a href="#">pdf (coming soon) </a>  &nbsp <a href="javascript:toggleblock('iccv19cvpAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('iccv19cvpBib')">bibtex </a> </p>
+<a href="https://arxiv.org/pdf/1908.08522.pdf">pdf </a>  &nbsp <a href="https://judyye.github.io/CVP/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv19cvpAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('iccv19cvpBib')">bibtex </a>  &nbsp <a href="https://github.com/JudyYe/CVP">code </a> </p>
 </td>
 </tr>
 </table>
@@ -474,7 +474,7 @@ hideblock('cvpr17abstractionBib');
 <p><b id="papertitle">Hierarchical Surface Prediction for 3D Object Reconstruction</b> <br/> 
 Christian H&auml;ne, <strong>Shubham Tulsiani</strong>, Jitendra Malik <br/> 
 3DV, 2017 <br/> 
-<a href="https://arxiv.org/pdf/1704.00710.pdf">pdf </a>  &nbsp <a href="javascript:toggleblock('3dv17hspAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('3dv17hspBib')">bibtex </a>  &nbsp <a href="https://people.eecs.berkeley.edu/~chaene/publications/haene2017hspICCVTalk.pdf">slides </a>  &nbsp <a href="https://github.com/chaene/hsp">code </a> </p>
+<a href="https://arxiv.org/pdf/1704.00710.pdf">pdf </a>  &nbsp <a href="javascript:toggleblock('3dv17hspAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('3dv17hspBib')">bibtex </a>  &nbsp <a href="https://people.eecs.berkeley.edu/~chaene/publications/haene2017hspICCVTalk.pdf">slides </a>  &nbsp <a href="https://www.youtube.com/watch?v=BjwhMDhbqAs">"Two Minute Papers" video </a>  &nbsp <a href="https://github.com/chaene/hsp">code </a> </p>
 </td>
 </tr>
 </table>
