--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ hideblock('cvpr20acsmBib');
 <div class="paper" id="cvpr20force">
 <img class="paper" src="figures/cvpr20force.png" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Use the Force, Luke! Learning to Predict Physical Forces by Simulating Effects</b> <br/> 
-Kiana Ehsani, <strong>Shubham Tulsiani</strong>, Saurabh Gupta, Abhinav Gupta <br/> 
+Kiana Ehsani, <strong>Shubham Tulsiani</strong>, Saurabh Gupta, Ali Farhadi, Abhinav Gupta <br/> 
 CVPR, 2020 <br/> 
 <a href="#">pdf </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceBib')">bibtex </a> </p>
 <div class="papermeta" id="cvpr20forceMeta">
@@ -77,7 +77,7 @@ CVPR, 2020 <br/>
 
 @inProceedings{ehsani2020force,
   title={Use the Force, Luke! Learning to Predict Physical Forces by Simulating Effects},
-  author={Ehsani, Kiana and  Tulsiani, Shubham and Gupta, Saurabh and Gupta, Abhinav},
+  author={Ehsani, Kiana and  Tulsiani, Shubham and Gupta, Saurabh and Farhadi, Ali and Gupta, Abhinav},
   year={2020},
   booktitle={Computer Vision and Pattern Recognition (CVPR)}
 }</pre></td>
