--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ shubhtuls AT fb DOT com
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Articulation-aware Canonical Surface Mapping</b> <br/> 
 Nilesh Kulkarni, Abhinav Gupta, David Fouhey, <strong>Shubham Tulsiani</strong> <br/> 
 CVPR, 2020 <br/> 
-<a href="#">pdf </a>  &nbsp <a href="javascript:toggleblock('cvpr20acsmAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('cvpr20acsmBib')">bibtex </a> </p>
+<a href="https://arxiv.org/pdf/2004.00614.pdf">pdf </a>  &nbsp <a href="https://nileshkulkarni.github.io/acsm/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr20acsmAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('cvpr20acsmBib')">bibtex </a>  &nbsp <a href="https://youtu.be/qgVwjkO2ltw">video </a>  &nbsp <a href="http://www.github.com/nileshkulkarni/acsm/">code </a> </p>
 <div class="papermeta" id="cvpr20acsmMeta">
 <em id="cvpr20acsmAbs">We tackle the tasks of: 1) predicting a Canonical Surface Mapping (CSM) that indicates the mapping from 2D pixels to corresponding points on a canonical template shape , and 2) inferring the articulation and pose of the template corresponding to the input image. While previous approaches rely on leveraging keypoint supervision for learning, we present an approach that can learn without such annotations. Our key insight is that these tasks are geometrically related, and we can obtain supervisory signal via enforcing consistency among the predictions. We present results across a diverse set of animate object categories, showing that our method can learn articulation and CSM prediction from image collections using only foreground mask labels for training. We empirically show that allowing articulation helps learn more accurate CSM prediction, and that enforcing the consistency with predicted CSM is similarly critical for learning meaningful articulation.</em>
 <pre xml:space="preserve" id="cvpr20acsmBib">
@@ -70,7 +70,7 @@ hideblock('cvpr20acsmBib');
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Use the Force, Luke! Learning to Predict Physical Forces by Simulating Effects</b> <br/> 
 Kiana Ehsani, <strong>Shubham Tulsiani</strong>, Saurabh Gupta, Ali Farhadi, Abhinav Gupta <br/> 
 CVPR, 2020 <br/> 
-<a href="#">pdf </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceBib')">bibtex </a> </p>
+<a href="https://arxiv.org/pdf/2003.12045.pdf">pdf </a>  &nbsp <a href="https://ehsanik.github.io/forcecvpr2020/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('cvpr20forceBib')">bibtex </a> </p>
 <div class="papermeta" id="cvpr20forceMeta">
 <em id="cvpr20forceAbs">When we humans look at a video of human-object interaction, we can not only infer what is happening but we can even extract actionable information and imitate those interactions. On the other hand, current recognition or geometric approaches lack the physicality of action representation. In this paper, we take a step towards more physical understanding of actions. We address the problem of inferring contact points and the physical forces from videos of humans interacting with objects. One of the main challenges in tackling this problem is obtaining ground-truth labels for forces. We sidestep this problem by instead using a physics simulator for supervision. Specifically, we use a simulator to predict effects, and enforce that estimated forces must lead to same effect as depicted in the video. Our quantitative and qualitative results show that (a) we can predict meaningful forces from videos whose effects lead to accurate imitation of the motions observed, (b) by jointly optimizing for contact point and force prediction, we can improve the performance on both tasks in comparison to independent training, and (c) we can learn a representation from this model that generalizes to novel objects using few shot examples.</em>
 <pre xml:space="preserve" id="cvpr20forceBib">
@@ -142,8 +142,7 @@ hideblock('iclr20motorBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="icra20schema">
-<img class="paper static" src="figures/icra20schema.png" />
-<img class="paper" src="figures/icra20schema.gif" />
+<img class="paper" src="figures/icra20schema.png" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Efficient Bimanual Manipulation using Learned Task Schemas</b> <br/> 
 Rohan Chitnis, <strong>Shubham Tulsiani</strong>, Saurabh Gupta, Abhinav Gupta <br/> 
 ICRA, 2020 <br/> 
@@ -168,8 +167,7 @@ hideblock('icra20schemaBib');
 <div class="year_heading"><br>2019<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
 <div class="paper" id="corl19ocm">
-<img class="paper static" src="figures/corl19ocm.png" />
-<img class="paper" src="figures/corl19ocm.gif" />
+<img class="paper" src="figures/corl19ocm.png" />
 <p><b id="papertitle">Object-centric Forward Modeling for Model Predictive Control</b> <br/> 
 Yufei Ye, Dhiraj Gandhi, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
 CORL, 2019 <br/> 
@@ -194,8 +192,7 @@ hideblock('corl19ocmBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv19csm">
-<img class="paper static" src="figures/iccv19csm.png" />
-<img class="paper" src="figures/iccv19csm.gif" />
+<img class="paper" src="figures/iccv19csm.png" />
 <p><b id="papertitle">Canonical Surface Mapping via Geometric Cycle Consistency</b> <br/> 
 Nilesh Kulkarni, Abhinav Gupta*, <strong>Shubham Tulsiani</strong>* <br/> 
 ICCV, 2019 <br/> 
@@ -220,8 +217,7 @@ hideblock('iccv19csmBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iccv19cvp">
-<img class="paper static" src="figures/iccv19cvp_static.png" />
-<img class="paper" src="https://judyye.github.io/images/0_cvp.gif" />
+<img class="paper" src="figures/iccv19cvp_static.png" />
 <p><b id="papertitle">Compositional Video Prediction</b> <br/> 
 Yufei Ye, Maneesh Singh, Abhinav Gupta*, <strong>Shubham Tulsiani</strong>* <br/> 
 ICCV, 2019 <br/> 
