--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <div class="section">
 <table>
   <tr valign="top"> <td style="width: 600px; vertical-align: top;">
-  I am a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I recently graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>. I am interested in learning about and inferring the structure underlying the visual world.
+  I am a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I  graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros</a>.
+  <p><br></p>
+  I am interested in building perception systems that can infer the spatial and physical structure of the world they observe.
   <p><br></p>
   <p>
     <a href="javascript:toggleblock('email')">email</a> | <a href="https://github.com/shubhtuls">github</a>  | <a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-93.html">thesis</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a>
