--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="section">
 <table>
   <tr valign="top"> <td style="width: 600px; vertical-align: top;">
-  I am a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I  graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros</a>.
+  I will be joining the CMU School of Computer Science as an Assistant Professor in Fall 2021. I am currently a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I previously graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros</a>.
   <p><br></p>
   I am interested in building perception systems that can infer the spatial and physical structure of the world they observe.
   <p><br></p>
