--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-60320583-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-60320583-2');
+</script>
+
 <title>Shubham Tulsiani - Home</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
