--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <tr valign="top"> <td style="width: 600px; vertical-align: top;">
   I will be joining the CMU School of Computer Science as an Assistant Professor in Fall 2021. I am currently a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I previously graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros</a>.
   <p><br></p>
-  I am interested in building perception systems that can infer the spatial and physical structure of the world they observe.
+  I am interested in building perception systems that can infer the spatial and physical structure of the world they observe. Please see <a href = "https://youtu.be/lAZyzI-_omM?t=108">this recent talk</a> for an overview.
   <p><br></p>
   <p>
     <a href="javascript:toggleblock('email')">email</a> | <a href="https://github.com/shubhtuls">github</a>  | <a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-93.html">thesis</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a>
